--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html lang="{{ page.lang | default: site.lang | default: 'en' }}">
 
   {%- include head.html -%}
 
   <body>
     
-    {%- include header.html -%}
+    {%- include navigation.html -%}
 
-    <main class="container">
-        {{ content }}
-    </main>
+    {{ content }}
 
     {%- include footer.html -%}
 
+  <script src="/js/menu.js"></script>
   </body>
 
 </html>
