--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -12,6 +12,17 @@ body {
   background-color: #142666;
 }
 
+nav *, main *, footer * {
+  opacity: 0;
+  animation: fadeIn 1s ease forwards;
+
+  @keyframes fadeIn {
+    100% {
+      opacity: 1;
+    }
+  }
+}
+
 html {
   font-family: "Barlow";
   scroll-behavior: smooth;
@@ -132,7 +143,7 @@ main section {
 .content__wrapper>h2,section>h2 {
   font-size: 1.75rem;
   border-bottom: 1px solid #dbdbdb;
-  padding-top: 8rem;
+  padding-top: 7rem;
   padding-bottom: 1rem;
   margin-bottom: 3rem;
 }
@@ -215,6 +226,10 @@ main section {
   margin: 1rem auto;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+}
+
+.additional-content .additional__about {
   align-items: center;
 }
 
@@ -317,6 +332,7 @@ header nav {
 
     .submenu__trigger:focus, > a:focus {
       background-color: #f2f5ff;
+
       & + .chapter__submenu {
         opacity: 1;
         visibility: visible;
@@ -468,11 +484,6 @@ header nav {
   }
 }
 
-// .chapter__submenu:focus,.chapter__submenu:focus-within,.chapter__submenu:hover,.submenu__trigger:focus+.chapter__submenu,.submenu__trigger:hover+.chapter__submenu {
-//   opacity: 1;
-//   visibility: visible;
-// }
-
 footer {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -516,10 +527,11 @@ footer .logo__group {
   line-height: 1.5em;
   color: #d9f4ff;
   opacity: .95;
+  padding: .75rem;
 }
 
 .main-logo {
-  padding: .75em;
+  padding: .75rem;
   font-size: 1.25rem;
   font-weight: 700;
   letter-spacing: -.025rem;
@@ -994,4 +1006,59 @@ code {
 
 .social-share h4 {
   font-weight: 600;
+}
+
+.intro__start {
+  background-color: rgb(246, 250, 255);
+  padding: 2rem;
+  margin-top: 4rem;
+  border-radius: .25rem;
+
+  .content__wrapper {
+    padding-bottom: 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    align-content: center;
+
+    p {
+      max-width: 70ch;
+      margin: 1rem 0;
+      margin-right: 2rem;
+    }
+  }
+
+  .cta {
+    margin: 1rem 0;
+    background-color: #2a59ff;
+    padding: 1.5rem;
+    display: inline-block;
+    color: #fff;
+    text-decoration: none;
+    width: 100%;
+    text-align: center;
+    font-size: 1.35rem;
+    font-weight: 600;
+    max-width: 17.5rem;
+    transition: background-color .2s ease, box-shadow .2s ease;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+
+    svg {
+      margin-left: .5rem;
+      transition: transform .2s ease;
+    }
+
+    &:hover {
+      background-color: #1441e1;
+      box-shadow: 0 0 0 5px #9ac7ff;
+
+      svg {
+        transform: translateX(.35rem);
+      }
+    }
+  }
 }
