Line-height tweak
Adjusted list line-height to match paragraphs

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -169,6 +169,7 @@ main section {
   margin: 2rem 0;
   font-size: 1.25rem;
   color: #3b3b3b;
+  line-height: 1.35em;
 }
 
 .content__wrapper>ul p,.content__wrapper ol p,section>ul p,section ol p {
