--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -196,7 +196,7 @@ main section {
   left: 0;
   top: 0;
   display: inline-block;
-  background-color: rgb(42, 89, 255);
+  background-color: #dee4f7;
 }
 
 .content__wrapper blockquote p,section blockquote p {
