--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -186,6 +186,7 @@ main section {
   max-width: 60ch;
   font-size: 1.25rem;
   margin: 3rem 0;
+  line-height: 1.35em;
 }
 
 .content__wrapper blockquote:before,section blockquote:before {
