Fixed links on home page, etc..

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -56,7 +56,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class='link--inactive'>
+                    <a href="/chapters/03-Information-Architecture/">
                         <h5>03</h5>
                         <p>Information Architecture</p>
                     </a>
@@ -154,7 +154,7 @@
           </a>
       </li>
       <li>
-          <a href="#" class='link--inactive'>
+          <a href="/chapters/03-Information-Architecture/">
               <h5>03</h5>
               <p>Information Architecture</p>
           </a>
