--- a/_sass/custom/_variables.scss
+++ b/_sass/custom/_variables.scss
@@ -2,3 +2,20 @@
 // Custom Variables
 //
 
+$primary: #2a59ff;
+$primary--hover: #1737ad;
+$primary--hover-shadow: #9ac7ff;
+$dark-blue: #142666;
+$grey-blue: #6674a9;
+$light-blue: #6ec7ff;
+$pale-blue: #d9f4ff;
+$light-pale-blue: #f2f9ff;
+$white: #fff;
+
+$warning: #a00033;
+$warning-pale: #fff3f6;;
+
+$grey: #b0b0b0;
+$light-grey: #dbdbdb;
+
+$twitter-blue: #1da1f2;;
