Added bold colour for warning text

--- a/_sass/custom/_variables.scss
+++ b/_sass/custom/_variables.scss
@@ -13,6 +13,7 @@ $light-pale-blue: #f2f9ff;
 $white: #fff;
 
 $warning: #a00033;
+$warning-bold: #830c32;
 $warning-pale: #fff3f6;;
 
 $grey: #b0b0b0;
