--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1054,6 +1054,10 @@ a.cta {
   background-color: $warning-pale;
   padding: .5em;
   border-radius: .125em;
+
+  strong {
+    color: $warning-bold;
+  }
 }
 
 .page--error {
